<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="HardcodedText"
>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/virus_page_header"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:id="@+id/virusName"
                android:textStyle="bold"
                android:hint="Sam the Virus"
                android:textAlignment="textEnd"
                android:layout_gravity="end"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/carrier_label"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:hint="Mystery"
                android:textAlignment="textEnd"
                android:id="@+id/patientZero" android:layout_gravity="end"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/virus_infection_strength_label"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:hint="115"
                android:id="@+id/infectionPopulation" android:layout_gravity="end"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/virus_generation_label"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:hint="17"
                android:id="@+id/infectionCount" android:layout_gravity="end"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Funfection Rate"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:hint="HIGH"
                android:id="@+id/infectionRate" android:layout_gravity="end"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="Family"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:hint="Walters"
                android:id="@+id/virusFamily"
                android:layout_gravity="end"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="Chaos"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:hint="3"
                android:id="@+id/virusChaos"
                android:layout_gravity="end"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="Genome"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="ABC-1234-uwiwlen"
                android:id="@+id/virusGenome"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                android:layout_gravity="end"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="Origin"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Your neighbor down the road and the strange lady with a lot of cats"
                android:id="@+id/virusOrigin"
                android:textSize="18sp"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
        />


        <Button
                android:id="@+id/virusActionShareText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:layout_marginTop="14dp"
                android:text="@string/lab_action_share_text" />

        <Button
                android:id="@+id/virusActionShareQr"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:text="@string/lab_action_share_qr" />

        <Button
                android:id="@+id/virusActionPurge"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:text="@string/lab_action_purge" />

        <Button
                android:id="@+id/virusActionCombine"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:text="@string/lab_action_combine" />

        <Button
                android:id="@+id/virusActionBackToLab"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:text="@string/virus_back_to_lab_button" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
